# duckdb-manifold

./: Cargo.toml  Makefile  README.md
src/: error.rs  lib.rs  schema.rs
src/scanner/: edges.rs  entities.rs  mod.rs
tests/: integration_test.rs
