[package]
name = "duckdb_manifold"
version = "0.1.0"
edition = "2021"
description = "DuckDB extension for querying ManifoldDB databases"
authors = ["Tom Whiting <tom@ablative.com.au>"]
repository = "https://github.com/tomWhiting/duckdb-manifold"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
name = "duckdb_manifold"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "integration_test"
path = "tests/integration_test.rs"

[dependencies]
duckdb = { version = "=1.4.3", features = ["vtab-loadable", "vtab-arrow"] }
duckdb-loadable-macros = "=0.1.13"
libduckdb-sys = { version = "=1.4.3", features = ["loadable-extension"] }

# ManifoldDB storage layer
manifoldb-storage = "0.1.2"
manifoldb-core = "0.1.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
